# uv-fastapi-tortoise

./: .gitignore  README.md  pyproject.toml
docs/: Example.md  _Project.md
project/: __init__.py
project/api/: __init__.py  docs.py  errors.py  lifespan.py  schemas.py
project/api/example/: router.py
project/db/: __init__.py  fields.py  lifespan.py
project/db/migrations/models/: 0_20260128082622_init.py
project/db/models/: example.py
project/lib/: settings.py
